fixing overlaping navbar and pages when on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,6 @@
   text-align: center;
 }
 
-.page {
-  position: absolute;
-  top: 80px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
