--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -215,6 +215,14 @@ h1 {
 
 /* Page Animation transitions */
 
+.page {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .slide-appear 
 .slide-enter {
   opacity: 0;
@@ -242,13 +250,16 @@ h1 {
 
   }
   .appTitle {
-      color: black;
-      font-weight: bolder;
-      font-size: 15px;
-      margin-left: -20px;
-      text-shadow:
-      -1px -1px 0 rgba(255, 255, 255, 0),
-      1px 1px 0 rgba(0,0,0,.25),
-      3px 3px 3px rgba(0,0,0,.25);
+    color: black;
+    font-weight: bolder;
+    font-size: 15px;
+    margin-left: -20px;
+    text-shadow:
+    -1px -1px 0 rgba(255, 255, 255, 0),
+    1px 1px 0 rgba(0,0,0,.25),
+    3px 3px 3px rgba(0,0,0,.25);
+  }
+  .page {
+    top: 90px;
   }
 }
